# global_robot_localization

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: LocalizeInMap.action
include/global_robot_localization/: global_robot_localization.hpp  localization_search.hpp  map_model.hpp  sim.hpp  sim_node.hpp
params/: lidar_errors.yaml  test.yaml
src/: global_robot_localization.cpp  global_robot_localization_node.cpp  localization_search.cpp  map_model.cpp  sim.cpp  sim_node.cpp
tests/: test_localization.cpp  test_node.cpp
writeup/: .gitignore  algo.tex
